# FastAPI-Redis-Dependency-Injection

./: .gitignore  README.md  pyproject.toml
.devcontainer/: DockerFile  devcontainer.json  docker-compose.yml
app/: containers.py  main.py
app/api/: dependecies.py
app/api/v1/: api.py
app/api/v1/routes/: users.py
app/dtos/: users.py
app/models/: users.py
app/services/cache/: __init__.py  adapters.py  service.py
app/services/cache/clients/: redis.py
app/settings/: __init__.py  base.py
